--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <button id="toggleTime" style="background:orange; color:black" ;>Show Local Time</button>
  <button id="shareBtn" style="background:#19bbff; color:black" > Share </button>
 <button id="shareBtn" style="background:#19bbff; color:black" > 
-<a href="https://paypal.me/manjurahmedbogee/100">Buy me a coffee!! </a>
+<a href="https://paypal.me/manjurahmedbogee/">Buy me a coffee!! </a>
 </button>
 <div id="utc"></div>
 
@@ -150,4 +150,5 @@
 
 </body>
 </html>
+
 
