--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 <h1>Live Forex Sessions</h1>
 <button id="toggleTime" style="background:orange; color:black" ;>Show Local Time</button>
  <button id="shareBtn" style="background:#19bbff; color:black" > Share </button>
-<button id="shareBtn" style="background:#19bbff; color:black" > 
-<a href="https://paypal.me/manjurahmedbogee/">Buy me a coffee!! </a>
+<button id="buyCoffeeBtn" style="background:#19bbff; color:black" > 
+Buy me a coffee!! 
 </button>
 <div id="utc"></div>
 
@@ -150,5 +150,3 @@
 
 </body>
 </html>
-
-
