--- a/about.html
+++ b/about.html
@@ -2,38 +2,31 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>About – KillZone Forex Sessions</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="KillZone helps traders visualize live forex market sessions, overlaps, and liquidity periods with automatic DST handling.">
+<title>About – KillZone FX</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<h1>About KillZone</h1>
+<header class="header">
+  <div class="logo">KillZone FX</div>
+  <nav class="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-<p>
-KillZone is a lightweight, real-time forex session tracker designed for traders
-who want clarity — not confusion.
-</p>
-
-<p>
-We focus on showing <strong>accurate market sessions</strong>, automatic
-<strong>daylight saving time (DST) adjustments</strong>, and clear
-<strong>liquidity overlaps</strong> without bloated indicators or broker bias.
-</p>
-
-<p>
-KillZone does not provide trading signals or financial advice. It is built purely
-to help traders understand <em>when</em> the market is active — not <em>what</em>
-to trade.
-</p>
-
-<p>
-Built for speed. Built for accuracy. Built by traders.
-</p>
+<h1>About KillZone FX</h1>
+<p>KillZone FX is a live Forex market tracker designed for traders of all levels. Our goal is to provide real-time trading session information, economic events, and actionable tips to help you make smarter trading decisions.</p>
+<p>This site is maintained independently and is continuously updated to reflect current market conditions. We also aim to educate traders on session overlaps, liquidity, and volatility patterns.</p>
 
 <footer>
-  <a style="color:grey;" href="index.html">← Back to KillZone</a>
+  <a href="privacy.html" style="color:grey;">Privacy</a> |
+  <a href="disclaimer.html" style="color:grey;">Disclaimer</a> |
+  <a href="terms.html" style="color:grey;">Terms</a> |
+  <a href="contact.html" style="color:grey;">Contact</a>
 </footer>
 
 </body>
