--- a/privacy.html
+++ b/privacy.html
@@ -2,40 +2,31 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Privacy Policy – KillZone</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="KillZone privacy policy explaining data usage, cookies, and third-party services.">
+<title>Privacy Policy – KillZone FX</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+<header class="header">
+  <div class="logo">KillZone FX</div>
+  <nav class="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
 <h1>Privacy Policy</h1>
-
-<p>
-KillZone respects your privacy. We do not collect personal information such as
-names, emails, or payment details.
-</p>
-
-<h2>Cookies & Analytics</h2>
-<p>
-We may use cookies and third-party analytics services (such as Google Analytics)
-to understand usage patterns and improve performance.
-</p>
-
-<h2>Advertising</h2>
-<p>
-Third-party advertising partners may use cookies or similar technologies to
-display relevant ads.
-</p>
-
-<h2>External Links</h2>
-<p>
-We are not responsible for the privacy practices of external websites linked
-from KillZone.
-</p>
+<p>We respect your privacy. KillZone FX does not sell or share your personal information. Any data collected, such as analytics or cookies, is solely for improving site functionality and user experience.</p>
+<p>Third-party tools like TradingView widgets or ads may collect anonymous usage data, which is governed by their respective privacy policies.</p>
 
 <footer>
-  <a style="color:grey;" href="index.html">← Back to KillZone</a>
+  <a href="privacy.html" style="color:grey;">Privacy</a> |
+  <a href="disclaimer.html" style="color:grey;">Disclaimer</a> |
+  <a href="terms.html" style="color:grey;">Terms</a> |
+  <a href="contact.html" style="color:grey;">Contact</a>
 </footer>
 
 </body>
