--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact – KillZone FX</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header class="header">
+  <div class="logo">KillZone FX</div>
+  <nav class="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<h1>Contact KillZone FX</h1>
+<p>If you have questions, suggestions, or feedback, you can reach out to us using the form below:</p>
+
+<form action="mailto:youremail@example.com" method="post" enctype="text/plain">
+  <label>Name:</label><br>
+  <input type="text" name="name" required><br><br>
+  <label>Email:</label><br>
+  <input type="email" name="email" required><br><br>
+  <label>Message:</label><br>
+  <textarea name="message" rows="5" required></textarea><br><br>
+  <input type="submit" value="Send" style="background:#19bbff; color:black; padding:8px 15px; border:none; border-radius:5px;">
+</form>
+
+<footer>
+  <a href="privacy.html" style="color:grey;">Privacy</a> |
+  <a href="disclaimer.html" style="color:grey;">Disclaimer</a> |
+  <a href="terms.html" style="color:grey;">Terms</a> |
+  <a href="contact.html" style="color:grey;">Contact</a>
+</footer>
+
+</body>
+</html>
 
