--- a/index.html
+++ b/index.html
@@ -20,17 +20,20 @@
 
 </head>
 <body>
-
-<!-- HEADER MENU -->
 <header class="header">
   <div class="logo">KillZone FX</div>
-  <nav class="nav-menu">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="privacy.html">Privacy</a>
-    <a href="contact.html">Contact</a>
+  <nav>
+    <div class="hamburger" id="hamburger">&#9776;</div>
+    <div class="nav-menu" id="nav-menu">
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+    </div>
   </nav>
+  <button id="themeToggle">🌙 Dark Mode</button>
 </header>
+
 
 <!-- DARK/LIGHT TOGGLE -->
 <div style="text-align: right; margin: 20px;">
@@ -135,3 +138,4 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
