--- a/beginner-guide.html
+++ b/beginner-guide.html
@@ -1,1 +1,117 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Beginner's Forex Trading Guide – KillZone FX</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<header class="header">
+  <div class="logo">KillZone FX</div>
+  <nav>
+    <div class="hamburger" id="hamburger">&#9776;</div>
+    <div class="nav-menu" id="nav-menu">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="beginner-guide.html" class="active">Trading Guide</a>
+    </div>
+  </nav>
+  <button id="themeToggle">🌙 Dark Mode</button>
+</header>
+
+<main style="max-width:900px; margin:auto; padding:20px; line-height:1.7;">
+  <h1>Beginner's Guide to Forex Trading</h1>
+  <p>Welcome to KillZone FX’s comprehensive beginner guide. This page will help you understand the forex market, trading sessions, strategies, and tips for getting started safely and effectively.</p>
+
+  <h2>Introduction to Forex Trading</h2>
+  <p>Forex, short for <strong>foreign exchange</strong>, is the global market where currencies are traded. It is the largest financial market in the world, with trillions of dollars traded daily. Unlike stocks, the forex market operates <strong>24 hours a day, five days a week</strong>, allowing traders around the world to participate anytime.</p>
+  <p>Forex trading involves buying one currency while simultaneously selling another. Currencies are always quoted in pairs like <strong>EUR/USD</strong> or <strong>GBP/JPY</strong>. The first currency is the <strong>base currency</strong>, and the second is the <strong>quote currency</strong>. Example: If EUR/USD = 1.1000, it means 1 Euro = 1.10 US Dollars.</p>
+
+  <h2>Why Trade Forex?</h2>
+  <ul>
+    <li><strong>Liquidity:</strong> Forex is extremely liquid, so trades can be executed quickly without affecting the price much.</li>
+    <li><strong>Flexibility:</strong> The market is open 24/5, allowing trading at your convenience.</li>
+    <li><strong>Leverage:</strong> Brokers offer leverage, letting traders control larger positions with smaller capital.</li>
+    <li><strong>Diversity:</strong> Trade major, minor, exotic currency pairs, commodities, indices, or crypto depending on your broker.</li>
+    <li><strong>Opportunities in any market condition:</strong> Profit in both rising and falling markets.</li>
+  </ul>
+
+  <h2>Understanding Forex Sessions</h2>
+  <p>The forex market is divided into four main trading sessions, corresponding to the largest financial centers:</p>
+  <ul>
+    <li><strong>Sydney Session:</strong> Starts the trading week, lower volatility, best for AUD/NZD pairs.</li>
+    <li><strong>Tokyo Session:</strong> Major Asian currencies active, moderate volatility, good for cautious traders.</li>
+    <li><strong>London Session:</strong> High volatility and liquidity, overlaps with Tokyo and New York create <strong>KillZones</strong>.</li>
+    <li><strong>New York Session:</strong> Major USD activity, high volatility, especially during London overlap.</li>
+  </ul>
+  <p><strong>KillZone / Overlaps:</strong> When two sessions overlap, the market experiences higher liquidity and tighter spreads, offering prime trading opportunities.</p>
+
+  <h2>Basic Forex Concepts</h2>
+  <ul>
+    <li><strong>Pips:</strong> Smallest unit of price movement. Example: EUR/USD moves 1.1000 → 1.1005 = 5 pips.</li>
+    <li><strong>Lots:</strong> Standardized trade sizes. Standard lot = 100,000, Mini = 10,000, Micro = 1,000.</li>
+    <li><strong>Spread:</strong> Difference between buy (ask) and sell (bid) price.</li>
+    <li><strong>Leverage & Margin:</strong> Trade positions larger than your capital, e.g., 1:100 leverage. Use cautiously.</li>
+    <li><strong>Long vs Short:</strong> Going long = buy expecting price rise, going short = sell expecting price fall.</li>
+  </ul>
+
+  <h2>Types of Forex Analysis</h2>
+  <ul>
+    <li><strong>Fundamental Analysis:</strong> Study economic news, interest rates, and geopolitical events.</li>
+    <li><strong>Technical Analysis:</strong> Use charts and indicators like RSI, MACD, Moving Averages.</li>
+    <li><strong>Sentiment Analysis:</strong> Analyze market mood using COT reports and retail positioning.</li>
+  </ul>
+
+  <h2>How to Start Trading – Step by Step</h2>
+  <ol>
+    <li><strong>Choose a Reliable Broker:</strong> Regulated, low spreads, good reviews.</li>
+    <li><strong>Open a Demo Account:</strong> Practice without risking real money.</li>
+    <li><strong>Learn to Read Forex Charts:</strong> Candlesticks, trends, support/resistance.</li>
+    <li><strong>Develop a Trading Strategy:</strong> Decide scalping, day trading, or swing trading approach.</li>
+    <li><strong>Risk Management:</strong> Limit risk to 1-2% per trade, use stop-loss orders, and adjust lot sizes.</li>
+    <li><strong>Keep a Trading Journal:</strong> Track entries, exits, strategies, and outcomes for improvement.</li>
+  </ol>
+
+  <h2>Tips for Beginners</h2>
+  <ul>
+    <li>Start small and increase gradually.</li>
+    <li>Avoid emotional trading — follow your plan.</li>
+    <li>Check economic events to avoid surprises.</li>
+    <li>Focus on a few currency pairs initially.</li>
+    <li>Always use stop-losses and review trades regularly.</li>
+  </ul>
+
+  <h2>Common Mistakes Beginners Make</h2>
+  <ul>
+    <li>Overleveraging — risking too much.</li>
+    <li>Trading without a plan.</li>
+    <li>Ignoring economic news.</li>
+    <li>Chasing losses (revenge trading).</li>
+    <li>Using too many indicators — clutters charts.</li>
+  </ul>
+
+  <h2>Conclusion</h2>
+  <p>Forex trading is rewarding but requires discipline, knowledge, and patience. Beginners should focus on learning basics, practicing on demo accounts, and developing a strategy suited to their risk tolerance. KillZone FX provides the tools to track sessions, visualize kill zones, and follow major economic events — making it the ideal companion for your trading journey.</p>
+
+  <p><strong>Pro Tip:</strong> Use KillZone FX sessions and economic calendar to plan trades before the market moves. This increases chances of high-probability trades while reducing risk.</p>
+</main>
+
+<footer>
+  <a href="privacy.html">Privacy</a> | 
+  <a href="terms.html">Terms</a>
+</footer>
+
+<script src="js/script.js"></script>
+<script>
+// Hamburger menu toggle
+const hamburger = document.getElementById('hamburger');
+const navMenu = document.getElementById('nav-menu');
+hamburger.addEventListener('click', () => {
+    navMenu.classList.toggle('show');
+});
+</script>
+</body>
+</html>
 
