--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="hamburger" id="hamburger">&#9776;</div>
     <div class="nav-menu" id="nav-menu">
       <a href="index.html" class="active">Home</a>
+     <a href="beginner-guide.html">Beginner's Guide</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy</a>
       <a href="contact.html">Contact</a>
@@ -134,5 +135,6 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
