--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
   <div class="logo">KillZone FX</div>
   <nav class="nav-menu">
     <a href="index.html">Home</a>
+     <a href="beginner-guide.html">Beginner's Guide</a>
     <a href="about.html">About</a>
     <a href="privacy.html">Privacy</a>
     <a href="contact.html">Contact</a>
