--- a/privacy.html
+++ b/privacy.html
@@ -7,29 +7,87 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <header class="header">
   <div class="logo">KillZone FX</div>
-  <nav class="nav-menu">
-    <a href="index.html">Home</a>
-     <a href="beginner-guide.html">Beginner's Guide</a>
-    <a href="about.html">About</a>
-    <a href="privacy.html">Privacy</a>
-    <a href="contact.html">Contact</a>
+  <nav>
+    <div class="hamburger" id="hamburger">&#9776;</div>
+    <div class="nav-menu" id="nav-menu">
+      <a href="index.html">Home</a> 
+      <a href="beginner-guide.html">Trading Guide</a>
+      <a href="about.html">About</a>
+      <a href="privacy.html" class="active">Privacy</a>
+     
+    </div>
   </nav>
+  <button id="themeToggle">🌙 Dark Mode</button>
 </header>
 
-<h1>Privacy Policy</h1>
-<p>We respect your privacy. KillZone FX does not sell or share your personal information. Any data collected, such as analytics or cookies, is solely for improving site functionality and user experience.</p>
-<p>Third-party tools like TradingView widgets or ads may collect anonymous usage data, which is governed by their respective privacy policies.</p>
+<main style="max-width:900px; margin:auto; padding:20px; line-height:1.7;">
+  <h1>Privacy Policy</h1>
+  <p>At KillZone FX, your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your personal information when you use our website and services. By accessing or using KillZone FX, you agree to the practices described in this policy.</p>
+
+  <h2>1. Information We Collect</h2>
+  <p>We may collect the following types of information:</p>
+  <ul>
+    <li><strong>Personal Information:</strong> Name, email address, or any information you voluntarily provide when contacting us or signing up for newsletters.</li>
+    <li><strong>Non-Personal Information:</strong> Browser type, device information, IP address, pages visited, and other usage statistics through tools like Google Analytics.</li>
+    <li><strong>Cookies and Similar Technologies:</strong> To enhance your experience, our site uses cookies and local storage to remember preferences and track usage patterns.</li>
+  </ul>
+
+  <h2>2. How We Use Your Information</h2>
+  <ul>
+    <li>To provide and maintain our website and services.</li>
+    <li>To improve website functionality and user experience.</li>
+    <li>To analyze traffic and understand user behavior.</li>
+    <li>To communicate important updates or respond to inquiries.</li>
+    <li>To comply with legal requirements.</li>
+  </ul>
+
+  <h2>3. Third-Party Services</h2>
+  <p>We may use third-party services, including:</p>
+  <ul>
+    <li><strong>Google AdSense:</strong> For displaying relevant ads. Google may use cookies to serve ads based on your interests.</li>
+    <li><strong>Google Analytics:</strong> To analyze traffic and user behavior anonymously.</li>
+  </ul>
+  <p>These services have their own privacy policies. We recommend reviewing them:</p>
+  <ul>
+    <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
+  </ul>
+
+  <h2>4. Data Security</h2>
+  <p>We take reasonable measures to protect your personal information from unauthorized access, use, or disclosure. However, no method of transmission over the Internet or electronic storage is 100% secure, and we cannot guarantee absolute security.</p>
+
+  <h2>5. Third-Party Links</h2>
+  <p>Our website may contain links to third-party websites. We are not responsible for the privacy practices or content of these external sites. We encourage you to read the privacy policies of each website you visit.</p>
+
+  <h2>6. Children's Privacy</h2>
+  <p>KillZone FX does not knowingly collect personal information from children under 13 years old. If we become aware that we have inadvertently collected personal information from a child, we will take steps to delete it.</p>
+
+  <h2>7. Your Choices</h2>
+  <ul>
+    <li>You can choose to disable cookies in your browser settings. Note that some features of the website may not function properly.</li>
+    <li>You can unsubscribe from newsletters or marketing communications at any time.</li>
+  </ul>
+
+  <h2>8. Changes to This Privacy Policy</h2>
+  <p>We may update this Privacy Policy from time to time. Updates will be posted on this page with a new effective date. We encourage you to review this page periodically to stay informed about how we protect your information.</p>
+
+  <h2>9. Contact Us</h2>
+  <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at: <a href="mailto:support@killzonefx.netlify.app">support@killzonefx.netlify.app</a></p>
+</main>
 
 <footer>
-  <a href="privacy.html" style="color:grey;">Privacy</a> |
-  <a href="disclaimer.html" style="color:grey;">Disclaimer</a> |
-  <a href="terms.html" style="color:grey;">Terms</a> |
-  <a href="contact.html" style="color:grey;">Contact</a>
+  <a href="privacy.html" class="active">Privacy</a> | 
+  <a href="terms.html">Terms</a>
 </footer>
 
+<script>
+// Hamburger menu toggle
+const hamburger = document.getElementById('hamburger');
+const navMenu = document.getElementById('nav-menu');
+hamburger.addEventListener('click', () => {
+    navMenu.classList.toggle('show');
+});
+</script>
 </body>
 </html>
-
