--- a/terms.html
+++ b/terms.html
@@ -13,6 +13,7 @@
     <div class="hamburger" id="hamburger">&#9776;</div>
     <div class="nav-menu" id="nav-menu">
       <a href="index.html">Home</a>
+      <a href="beginner-guide.html">Trading Guide</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy</a>
       <a href="terms.html" class="active">Terms</a>
@@ -85,3 +86,4 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
