--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy</a>
       <a href="contact.html">Contact</a>
+      <a href="terms.html">Terms&COnditions</a>
     </div>
   </nav>
   <button id="themeToggle">🌙 Dark Mode</button>
@@ -135,6 +136,7 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
