--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <a href="about.html">About</a>
     <a href="privacy.html">Privacy</a>
     <a href="contact.html">Contact</a>
+     <a href="terms.html">Terms & Conditions</a>
   </nav>
 </header>
 
