--- a/beginner-guide.html
+++ b/beginner-guide.html
@@ -13,9 +13,10 @@
     <div class="hamburger" id="hamburger">&#9776;</div>
     <div class="nav-menu" id="nav-menu">
       <a href="index.html">Home</a>
+      <a href="beginner-guide.html" class="active">Trading Guide</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy</a>
-      <a href="beginner-guide.html" class="active">Trading Guide</a>
+         <a href="terms.html">Terms & Conditions</a>
     </div>
   </nav>
   <button id="themeToggle">🌙 Dark Mode</button>
