--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
       <a href="beginner-guide.html">Trading Guide</a>
       <a href="about.html">About</a>
       <a href="privacy.html" class="active">Privacy</a>
-     
+        <a href="terms.html">Terms & Conditions</a>
     </div>
   </nav>
   <button id="themeToggle">🌙 Dark Mode</button>
@@ -91,3 +91,4 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
